# py-shawking

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  modules.md
src/shawking/: __init__.py  client.py
tests/: test_client.py
